/*
 * $Id: ChangeLog,v 1.1777 2003/11/26 20:16:03 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-26 22:59 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapi.h
  * include/hbapiitm.h
  * include/hbvmpub.h
  * source/vm/classes.c
  * source/vm/extend.c
  * source/vm/fastitem.c
  * source/vm/garbage.c
  * source/vm/thread.c
    ! reverted changes on HB_IT_POINTER structure, using standard GC
      finalizator instead.

  * tests/mtcomplex.prg
    * Testing for mutex correct finalization


2003-11-26 23:10 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * make_drw.sh
    * Added HB_MT=no - threads don't work on Darwin yet.
  * config/darwin/gcc.cf
    * Fixed ld syntax.
  * source/pp/ppcore.c
    ! Fixed a bug in ReplacePattern() when lenreal == 0.
  * source/rtl/hbserv.c
    * Added `#if !defined(HB_OS_DARWIN)' - Darwin signal APIs differ from
      the Linux signal APIs a lot.

2003-11-26 20:40 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/hvm.c
    * using hb_vm_* prefix also in MT for enums and withobject
     (by define aliasing)

  * tests/mtcomplex.prg
    ! DestroyMutex() does not exists anymore
 
2003-11-26 14:43 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapi.h
  * include/hbapiitm.h
  * include/hbvmpub.h
  * source/vm/extend.c
  * source/vm/fastitem.c
  * source/vm/garbage.c
    + Added support for garbage assisted pointer deep memory management

  * source/vm/thread.c
    * Using new GC assisted pointer support

  * source/vm/hash.c
    * Successful experiment of GC-olny item cleaning.

  * source/vm/errorapi.c
    ! Ops, forgot that we have 2 idle inspector: GC and error ALERT
      messages... Fixed.


2003-11-26 10:52 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/config/dos/global.cf